<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_mail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/correo_electronico"
            android:inputType="textEmailAddress"
            android:padding="15dp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_contraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_contraseña"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/contrasena"
            android:inputType="textPassword"
            android:padding="15dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_ingresar_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:padding="15dp"
        android:text="@string/ingresar"
        android:textColor="#FFFFFF"
        app:backgroundTint="@color/colorAccent" />


</LinearLayout>