<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/partido"
    app:cardUseCompatPadding="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ll_compra_producto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Encargado en"
                android:textAppearance="@style/CategoriaProductos"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_fecha_compra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="end"
                android:text="06:11 24/11/2016"
                android:textAppearance="@style/CategoriaProductos"
                android:textSize="12sp" />


        </LinearLayout>

        <TextView
            android:id="@+id/tv_encargado_compra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="5dp"
            android:text="Santiago del Estero 638 - Monserratn"
            android:textAppearance="@style/CategoriaProductos"
            android:textSize="16sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Estado del pedido: "
                android:textAppearance="@style/CategoriaProductos"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_estado_compra"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="Encargado"
                android:textAllCaps="true"
                android:textAppearance="@style/CategoriaProductos"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_cantidad_productos"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:background="@drawable/circulo"
                android:gravity="center"
                android:text="15"
                android:textAllCaps="true"
                android:textAppearance="@style/CategoriaProductos"
                android:textColor="@color/partido"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_editar_compra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:visibility="gone">

            <Button
                android:id="@+id/btn_cancelar_compra"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:gravity="start|center_vertical"
                android:text="@string/cancelar"
                android:textColor="@color/blanco" />

            <Button
                android:id="@+id/btn_modificar_compra"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawablePadding="10dp"
                android:gravity="start|center_vertical"
                android:text="@string/modificar"
                android:textColor="@color/blanco" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/rl_comentar_compra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:visibility="gone">

            <Button
                android:id="@+id/btn_comentar_compra"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:gravity="start|center_vertical"
                android:text="@string/comentar"
                android:textColor="@color/blanco" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/rl_repetir_compra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:visibility="gone">

            <Button
                android:id="@+id/btn_repetir_compra"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:gravity="start|center_vertical"
                android:text="@string/repetir_pedido"
                android:textColor="@color/blanco" />

        </LinearLayout>

    </LinearLayout>


</android.support.v7.widget.CardView>